objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Tri_CCS_Task__c</fullName>
        <description>Vertiba 3/10/14 - New field to track Customer-centric Sales sub-tasks that sales reps complete in the sales process</description>
        <inlineHelpText>Select the current CCS Subtask in progress as part of the Customer-Centric Selling process</inlineHelpText>
        <label>CCS Task</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Assess Opportunity</fullName>
                </value>
                <value>
                    <fullName>Research Account</fullName>
                </value>
                <value>
                    <fullName>Contact Account</fullName>
                </value>
                <value>
                    <fullName>Conduct Appointment</fullName>
                </value>
                <value>
                    <fullName>Create Follow-up Letter</fullName>
                </value>
                <value>
                    <fullName>Opportunity Assessment</fullName>
                </value>
                <value>
                    <fullName>Prospect Confirmation</fullName>
                </value>
                <value>
                    <fullName>Meet with Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Schedule Assessment</fullName>
                </value>
                <value>
                    <fullName>Complete Assessment Analysis</fullName>
                </value>
                <value>
                    <fullName>Schedule Demonstration</fullName>
                </value>
                <value>
                    <fullName>Validate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Create Proposal</fullName>
                </value>
                <value>
                    <fullName>Proposal QA</fullName>
                </value>
                <value>
                    <fullName>Present Proposal</fullName>
                </value>
                <value>
                    <fullName>Customer Proposal Review</fullName>
                </value>
                <value>
                    <fullName>Create Contract</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Post-deal Debrief</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tri_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vertiba 3/10/14 - for debrief information</description>
        <inlineHelpText>Select the contact who was the primary Champion for this opportunity</inlineHelpText>
        <label>Champion</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must be associated with the Opportunity Account</errorMessage>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <infoMessage>Contact must be associated with the Opportunity Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Champion)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tri_Close_Reason__c</fullName>
        <description>Vertiba 3/10/14 - debrief information to help assess why deal was won or lost</description>
        <inlineHelpText>Select one or more values that best describe the reason for closing.</inlineHelpText>
        <label>Close Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lost - Company Budget Constraints</fullName>
                </value>
                <value>
                    <fullName>Lost - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Lost - No Decision</fullName>
                </value>
                <value>
                    <fullName>Lost - no Opportunity</fullName>
                    <label>Lost - No Opportunity</label>
                </value>
                <value>
                    <fullName>Lost on Price</fullName>
                </value>
                <value>
                    <fullName>Lost - Open source</fullName>
                </value>
                <value>
                    <fullName>Lost - Other Reason</fullName>
                </value>
                <value>
                    <fullName>Lost - Product Features</fullName>
                </value>
                <value>
                    <fullName>Lost - Project Abandoned</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Won from Competitor</fullName>
                </value>
                <value>
                    <fullName>Won on Price</fullName>
                </value>
                <value>
                    <fullName>Won - Other Reason</fullName>
                </value>
                <value>
                    <fullName>Won - Product Features</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tri_Competitive_Products_Proposed__c</fullName>
        <description>Vertiba 3/10/14 - debrief information to assess competitive products</description>
        <inlineHelpText>Describe competitor&apos;s products</inlineHelpText>
        <label>Competitive Products Proposed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_Competitor__c</fullName>
        <description>Vertiba 3/10/14 - Added to track competitor companies on each opportunity per M. Eckhoff</description>
        <inlineHelpText>Select the primary competitor(s) on this opportunity.</inlineHelpText>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borland</fullName>
                </value>
                <value>
                    <fullName>CA (iTKO)</fullName>
                </value>
                <value>
                    <fullName>HP (Mercury QTP/UFT)</fullName>
                </value>
                <value>
                    <fullName>IBM RQM</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parasoft</fullName>
                </value>
                <value>
                    <fullName>Ranorex</fullName>
                </value>
                <value>
                    <fullName>SmartBear</fullName>
                </value>
                <value>
                    <fullName>Soasta</fullName>
                </value>
                <value>
                    <fullName>Telerik</fullName>
                </value>
                <value>
                    <fullName>TestPlant</fullName>
                </value>
                <value>
                    <fullName>Worksoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tri_Debrief_Comments__c</fullName>
        <description>Vertiba 3/10/14 - debrief information</description>
        <inlineHelpText>Additional information on reason won or lost, other important comments</inlineHelpText>
        <label>Debrief Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tri_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vertiba 3/10/14 - Debrief information</description>
        <inlineHelpText>Select the contact who was the primary decision-maker for this deal.</inlineHelpText>
        <label>Decision Maker</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must be associated with the Opportunity Account</errorMessage>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tri_Exec_Management_Involvement__c</fullName>
        <description>Vertiba 3/10/14 - debrief information
DEPRICATED</description>
        <inlineHelpText>Describe any involvement by executive management</inlineHelpText>
        <label>[x]Exec Management Involvement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_Field_Marketing_Involvement__c</fullName>
        <description>Vertiba 3/10/14 - debrief information</description>
        <inlineHelpText>Describe any field marketing involvement</inlineHelpText>
        <label>Field Marketing Involvement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_Forecast__c</fullName>
        <description>Vertiba 3/10/14 - added at Michael Eckhoff (VP Sales) request to capture forecast classification for reporting purposes only.</description>
        <inlineHelpText>Select the appropriate category -  used for sales executive reporting.</inlineHelpText>
        <label>Forecast</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tri_Professional_Svc_Involvement__c</fullName>
        <description>Vertiba 3/10/14 - Debrief information</description>
        <inlineHelpText>Describe any involvement by professional services or training</inlineHelpText>
        <label>Professional Svc Involvement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_SE_Involvement__c</fullName>
        <description>Vertiba 3/10/14 - Opportunity Debrief information</description>
        <inlineHelpText>Describe SE involvement in the deal, if any</inlineHelpText>
        <label>SE Involvement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_Successful_Process_Elements__c</fullName>
        <description>Vertiba 3/10/14 - debrief information</description>
        <inlineHelpText>List specific process elements, stages/tasks that contributed to success (e.g. client demonstration)</inlineHelpText>
        <label>Successful Process Elements</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tri_Total_Deal_Amount__c</fullName>
        <description>Vertiba 3/10/14 - Total amount of License, First Year Maintenance, and bundled PSO amount. Note for a Custom PSO SOW, sales rep should create a separate opportunity for PSO.</description>
        <formula>Amount +  PSO_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount + PSO Amount.</inlineHelpText>
        <label>Total Deal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tri_Total_Proposal_Amount__c</fullName>
        <description>Vertiba 3/10/14 - proposal amount - not tracked elsewhere with the opportunity</description>
        <inlineHelpText>Enter the total amount from the final customer proposal</inlineHelpText>
        <label>Total Proposal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tri_Written_Cost_Benefit_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vertiba 3/10/14 - debrief information to indicate whether a written cost benefit analysis was prepared for customer
DEPRICATED</description>
        <inlineHelpText>Check box if a written cost/benefit analysis was given to customer as part of proposal.  If so, attach document to this Opportunity.</inlineHelpText>
        <label>[x]ROI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tri_Written_Sequence_of_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vertiba 3/10/14 - debrief information to indicate whether a Written Sequence of Events
DEPRICATED</description>
        <inlineHelpText>Check box if a written Sequence of Events was created and attach to this opportunity.</inlineHelpText>
        <label>[x]Written Sequence of Events?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upside_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Tri_Forecast__c , &quot;Upside&quot;), Normalized_ACV__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upside Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upside_PSO_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Tri_Forecast__c , &quot;Upside&quot;), PSO_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upside PSO Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <formula>Amount *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted LIC+FYM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Normalized_ACV__c</fullName>
        <formula>IF( ISPICKVAL( License_Type__c ,&apos;Perpetual&apos;) ,  Weigthed_Annual_contract_value__c * 0.5, Weigthed_Annual_contract_value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weighted Normalized Annual contract value</inlineHelpText>
        <label>WNACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Total_Deal_Amount__c</fullName>
        <formula>Tri_Total_Deal_Amount__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Total Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weigthed_Annual_contract_value__c</fullName>
        <formula>Annual_contract_value__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Annual contract value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weigthed_Pipeline_NACV_in_Euro__c</fullName>
        <description>Value forecasted by the rep but adjusted by the probability of it being realized, depending on the opportunity stage.
Request by noefi 17.01.2018</description>
        <label>Weigthed Pipeline NACV in Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_commit_now__c</fullName>
        <description>Managers should enter this text field when they enter ACV mgmnt commit</description>
        <label>Why commit now</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_would_they_buy__c</fullName>
        <description>DEPRICATED</description>
        <inlineHelpText>Text field to describe the reason you think the customer will buy. Is needed for management commit.</inlineHelpText>
        <label>[x]Why would they buy?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_would_they_buy_at_close_date__c</fullName>
        <description>Depricated</description>
        <inlineHelpText>Text field to describe the reason you think the customer will buy at the specified close date. Is needed for management commit.</inlineHelpText>
        <label>[x]Why would they buy at close date?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X0_Active_SQL_Stage_Duration_Days__c</fullName>
        <label>0 Active (SQL) Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X0_Active_SQL_Stage_Start__c</fullName>
        <label>0 Active (SQL) Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1_Prospecting_Stage_Duration_Days__c</fullName>
        <label>1 Prospecting Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Prospecting_Stage_Start__c</fullName>
        <label>1 Prospecting Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2_Qualification_Stage_Duration_Days__c</fullName>
        <label>2 Qualification Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_Qualification_Stage_Start__c</fullName>
        <label>2 Qualification Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_Evaluation_Stage_Duration_Days__c</fullName>
        <label>3 Evaluation Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Evaluation_Stage_Start__c</fullName>
        <label>3 Evaluation Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X4_Proposal_Stage_Duration_Days__c</fullName>
        <label>4 Proposal Stage Duration(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4_Proposal_Stage_Start__c</fullName>
        <label>4 Proposal Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Negotiating_Stage_Duration_Days__c</fullName>
        <label>5 Negotiating Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Negotiating_Stage_Start__c</fullName>
        <label>5 Negotiating Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X6_ClosePending_Stage_Duration_Days__c</fullName>
        <label>6 ClosePending Stage Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X6_ClosePending_Stage_Start__c</fullName>
        <label>6 ClosePending Stage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_Current_and_Previous_FY__c</fullName>
        <formula>IF
(
                OR(
                                Date(YEAR(TODAY()),1,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY()),MONTH(TODAY()),DAY(TODAY())),
                                Date(YEAR(TODAY())-1,1,1) &lt;= CloseDate &amp;&amp; CloseDate &lt;= Date(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))
                                ), 

true, 
false)</formula>
        <label>YTD Current and Previous FY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_date__c</fullName>
        <label>First Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (First Campaign)</relationshipLabel>
        <relationshipName>first_campaign_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_last_campaign_date__c</fullName>
        <label>Last Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_last_campaign_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Last Campaign)</relationshipLabel>
        <relationshipName>last_campaign_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isclosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isclosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iseeit__Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__Current_Stages__c</fullName>
        <description>Field keep current stage values as per the sales process</description>
        <label>Current Stages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iseeit__DateTimeField__c</fullName>
        <label>DateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iseeit__Deal_Overview__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;apex/iseeit__iseeitDealOverView#/dealOverView/&apos;+Id , Name )</formula>
        <label>Deal Overview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__Default_Forecast_Image_Url__c</fullName>
        <label>Default Forecast Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iseeit__Forecast_Image_Link__c</fullName>
        <label>MainQualifierLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>iseeit__Forecast_Image_Url__c</fullName>
        <label>Forecast Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__IsUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iseeit__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__Main_Qualifiers__c</fullName>
        <formula>IF(iseeit__Forecast_Image_Url__c != null ,HYPERLINK(&apos;/apex/iseeit__DealViewPage?id=&apos;+Id , IMAGE(iseeit__Forecast_Image_Url__c+&quot;&amp;&quot;+TEXT(NOW() - CreatedDate) , &quot;Overview&quot;,18,300) , &quot;_blank&quot;), HYPERLINK(&apos;/apex/iseeit__DealViewPage?id=&apos;+Id , IMAGE(iseeit__Default_Forecast_Image_Url__c+&quot;&amp;&quot;+TEXT(NOW() - CreatedDate), &quot;Overview&quot;,18,300) , &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Qualifiers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__Opportunity_Reason__c</fullName>
        <label>Opportunity Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iseeit__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iseeit__Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>iseeit__Opportunity_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Value proposition</fullName>
                </value>
                <value>
                    <fullName>Relation</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
                <value>
                    <fullName>Service offering</fullName>
                </value>
                <value>
                    <fullName>Technical fit</fullName>
                </value>
                <value>
                    <fullName>Internal Development</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Change in Organization</fullName>
                </value>
                <value>
                    <fullName>Changed priorities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iseeit__Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iseeit__Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iseeit__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iseeit__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isenable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__MarketoAnalyzer__c</fullName>
        <description>This creates a link to the Marketo Opportunity Influence Analyzer. This feature requires an active subscription to Marketo Revenue Cycle Analytics.</description>
        <formula>HYPERLINK (&quot;/apex/mkto_si__MarketoRedirect?actionName=salesInsightAnalytics&amp;reportType=AccountAnalyzer&amp;objType=Opportunity&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__Marketo_Logo_16, $Label.mkto_si__Marketo_Opportunity_Analysis))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Opportunity Analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldTotal_contract_value__c</fullName>
        <description>ACV * subscription term
Depricated as of October 2017 - CPQ writes TCV into new TCV field</description>
        <formula>Annual_contract_value__c * IF(text(License_Type__c)=&quot;Perpetual&quot;,1,value(text(Subscription_Term__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ACV * subscription term</inlineHelpText>
        <label>oldTotal contract value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>with_Consulting_India__c</fullName>
        <defaultValue>false</defaultValue>
        <label>with Consulting India</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Annual_contract_value__c</columns>
        <columns>PSO_Amount__c</columns>
        <columns>Tri_Total_Deal_Amount__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Tosca</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Current_Q_All_Opps_APAC</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>iseeit__Main_Qualifiers__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Age__c</columns>
        <columns>Annual_contract_value__c</columns>
        <columns>LIC_FYM_mgmt_commit__c</columns>
        <columns>PSO_Amount__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Term__c</columns>
        <columns>Partner_registered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>6 Closed/Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Annual_contract_value__c</field>
            <operation>greaterThan</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Tosca</value>
        </filters>
        <filters>
            <field>Geo__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>Current_Q_All Opps_APAC</label>
        <sharedTo>
            <role>DSR_APAC_Head</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DSR_My_Oppty_View_current_Q</fullName>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tri_Forecast__c</columns>
        <columns>Annual_contract_value__c</columns>
        <columns>Normalized_ACV__c</columns>
        <columns>iseeit__Main_Qualifiers__c</columns>
        <columns>Age__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>PSO_Amount__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Term__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <filters>
            <field>Revenue_Type__c</field>
            <operation>notEqual</operation>
            <value>ARR</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>6 Closed/Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Tosca</value>
        </filters>
        <label>1. DSR My Oppty View - current Q</label>
    </listViews>
</CustomObject>